[package]
name = "url-shorter"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
rusqlite = { version = "0.32.0", features = ["bundled"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
